--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    // RxJava2
+    api "io.reactivex.rxjava2:rxjava:${rxJava2Version}"
+    api "io.reactivex.rxjava2:rxkotlin:${rxKotlinVersion}"
+
+    // DI
+    compileOnly "javax.inject:javax.inject:${javaxInjectVersion}"
 }
