--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.21'
+    ext {
+        rxJava2Version = '2.1.2'
+        rxAndroidVersion = '2.1.0'
+        rxKotlinVersion = '2.3.0'
+        javaxInjectVersion = '1'
+        kotlin_version = '1.3.21'
+    }
+
     repositories {
         google()
         jcenter()
         
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
